--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -88,7 +88,7 @@ body{
   width:100%;
   height:100%;
   background-color:white;
-  z-index:0;
+  z-index:-1;
   opacity:0.3;
   top:0;
 }
@@ -102,7 +102,7 @@ body{
     background-repeat: no-repeat;
     background-size:cover;
     background-position-y:-110;
-    z-index:-1;
+    z-index:-2;
 }
 
 
@@ -142,4 +142,44 @@ body{
 .text-right{
     text-align: left;
     margin-left: 140px;
+}
+
+/*booking.html*/
+.bookingpic_context{
+    width:1010px;
+    height:240px;
+    margin-top:30px; 
+}
+.booking_col_1{
+    height: 307px;
+    width:233px;
+    position: absolute;
+}
+.booking_col_2{
+    height:307px;
+    width:233px;
+    position: fixed;
+    z-index: 1;
+    margin-left: 350px;
+}
+.booking_col_3{
+    height:307px;
+    width:233px;
+    position: absolute;
+    margin-left: 700px;
+    top: 30px;
+    z-index: ;
+}
+.bookingtext_context{
+    height:10px;
+    width:500px;
+    color: #675540;
+    text-align: middle;
+    vertical-align: middle;
+}
+.bookingtel_context{
+    height:20px;
+    width:500px;
+    text-align: middle;
+    vertical-align: middle;
 }
