--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,7 +11,7 @@ body{
     z-index:3;
 }
 .title-color{
-    color:brown;
+    color:#886540;
 }
 
 .logo{
@@ -88,8 +88,8 @@ body{
   width:100%;
   height:100%;
   background-color:white;
-  z-index:0;
-  opacity:0.3;
+  z-index:-1;
+  opacity:0.4;
   top:0;
 }
 
@@ -102,7 +102,7 @@ body{
     background-repeat: no-repeat;
     background-size:cover;
     background-position-y:-110;
-    z-index:-1;
+    z-index:-2;
 }
 
 
@@ -142,4 +142,37 @@ body{
 .text-right{
     text-align: left;
     margin-left: 140px;
+}
+
+/*project-intro*/
+.intro{
+    height:350px;
+    width:1000px;
+    margin-top: 30px;
+}
+.intro-left{
+    height: 350px;
+    width: 300px;
+    position: absolute;
+
+}
+.intro-right{
+    height: :350px;
+    width: 500px;
+    position: relative;
+    left: 100px;
+}
+.photo-eight{
+    height: 171px;
+    width: 296px;
+    background-image:url(../imgs/frame.png);
+    padding-top: 30px;
+}
+.thumb{
+    height:171px;
+    width:260px;
+}
+.intro-text{
+    text-align: left;
+    width: 296px;
 }
