--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -173,13 +173,15 @@ body{
 .bookingtext_context{
     height:10px;
     width:500px;
-    color: #675540;
+    color: #835e37;
     text-align: middle;
-    vertical-align: middle;
+    vertical-align: text-bottom;
 }
 .bookingtel_context{
     height:20px;
     width:500px;
     text-align: middle;
-    vertical-align: middle;
+    vertical-align: text-bottom;
 }
+
+/*booking.html*/
