--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -213,10 +213,51 @@ body{
 }
 .bookingtel_context{
     height:20px;
-    width:500px;
+    width:600px;
     text-align: middle;
     vertical-align: text-bottom;
 }
 
-/*booking.html*/
+/*outer.html*/
+.outer_context{
+    width:800px;
+    height:240px;
+    margin-top:30px; 
+}
+.outer_col_1{
+    height: 329px;
+    width:567px;
+    margin-top: 5px;
+    background-image: url(../imgs/outer_textbg.png);
+    position: absolute;
+}
+.outer_col_2{
+    height:329px;
+    width:10px;
+    position: fixed;
+    z-index: 1;
+    margin-left: 510px;
+}
+.outer_col_3{
+    height:307px;
+    width:233px;
+    position: absolute;
+    margin-left: 580px;
+    margin-top: -5px;
+    top: 30px;
+    z-index: ;
+}
+.outer_text{
+    width:400px;
+    height:240px;
+    margin-left: -60px;
+    margin-top: 35px;
+}
 
+.outer_text p{
+    font-size: 12px;
+    line-height: 25px;
+    text-align: left;
+    margin-left: 0px;
+    margin-top: 0px;
+}
