--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,21 +1,27 @@
 body{
 
 }
-
+.fullscreen{
+    width:1004;
+    height:640;
+}
 .menu{
-    background-image: url(../imgs/menu.png);
+    background-image: url(../imgs/menu.jpg);
     height: 137px;
-    width:100%;
-    position:fixed;
-    bottom:0px;
-    z-index:3;
+    width:1004px;
+    position: absolute;
+    margin-top: -40px;
+    z-index:2;
 }
 .title-color{
     color:#886540;
 }
 
 .logo{
-    margin-top: -105px
+    height: 200px;
+    margin-top: -200px;
+    z-index: 5;
+    position: relative;
 }
 
 .logo:hover{
@@ -24,6 +30,7 @@ body{
 .menuitem{
     color: #ffe08b;
     width:106px;
+    z-index: 2;
 }
 .menuitem ul{
     background-image: url(../imgs/itemtable.png);
@@ -50,7 +57,7 @@ body{
     opacity: 0;
     width: 106px;
     height: 55px;
-    position: fixed;;
+    position: absolute;
 }
 .menuitem li .clicklayer:hover{
     opacity: 0.19;
@@ -68,48 +75,47 @@ body{
 }
 .bottom-text{
     font-size: 13px;
-    position: absolute;
-    bottom: 0px;
+    position: relative;
+    top: 12px;
     color: wheat;
-    left:30%;
-    right:25%;
+    /*left:30%;
+    right:25%;*/
 }
 .landing{
-    background-image: url(../imgs/welcome.png);
+    background-image: url(../imgs/welcome.jpg);
     width: 100%;
     height: 100%;
-    background-repeat: no-repeat;
+    /*background-repeat: no-repeat;*/
     background-size:cover;
-    background-position-y:-120px;
+    /*background-position-y:-120px;*/
 }
 
 .blur-layer{
   position:absolute;
-  width:100%;
-  height:100%;
+  width:1004px;
+  height:640px;
   background-color:white;
-  z-index:-1;
+  z-index:1;
   opacity:0.55;
   top:0;
 }
 
 .project{
-    background-image: url(../imgs/background.png);
-    width: 100%;
-    height: 100%;
-    position: absolute;
+    background-image: url(../imgs/background.jpg);
+    width: 1004px;
+    height: 640px;
     top:0;
-    background-repeat: no-repeat;
+    /*background-repeat: no-repeat;*/
     background-size:cover;
-    background-position-y:-110;
-    z-index:-2;
+    /*background-position-y:-110;*/
+    z-index:0;
 }
 
 .welcome_text{
     width: 390px;
     height: 152px;
-    margin-left: 700px;
-    margin-top: 100px;
+    margin-left: 450px;
+    margin-top: 130px;
 }
 
 .clicktext:hover{
@@ -120,21 +126,23 @@ body{
 .context{
     width:800px;
     height:325px;
-    margin-top:30px; 
+    margin-top:30px;
+    margin-left: 100px;
 }
 .col-1{
     height: 325px;
     width:400px;
     background-image: url(../imgs/10.png);
     position: absolute;
+    z-index: 2;
 }
 .col-2{
     height:325px;
     width:400px;
-    position: fixed;
-    z-index: 1;
+    position: absolute;
+    z-index: 3;
     margin-top: -15px;
-    margin-left: 203px;
+    margin-left: 200px;
 }
 .col-3{
     height:325px;
@@ -143,7 +151,7 @@ body{
     background-image: url(../imgs/11.png);
     margin-left: 400px;
     top: 30px;
-    z-index: ;
+    z-index: 2;
 }
 .text-left{
     text-align: right;
@@ -165,37 +173,43 @@ body{
     height:307px;
     width:233px;
     position: absolute;
-    margin-top: -5px;
-    z-index: ;
+    z-index: 3;
+    top:30px;
+    margin-left: 70px;
 
 }
 .split{
     height:329px;
     width:10px;
-    position: fixed;
-    z-index: 1;
-    margin-left: 320px;
+    position: absolute;
+    z-index: 3;
+    margin-left: 400px;
+    top:30px;
 }
 
 .intro-right{
     height: 329px;
     width:567px;
     position: absolute;
-    margin-left: 300px;
+    margin-left: 400px;
     margin-top: 5px;
     top: 30px;
+    z-index:3;
 }
 .photo-eight{
     height: 171px;
     width: 296px;
     background-image:url(../imgs/frame.png);
-    padding-top: 30px;
+    padding-top: 28px;
 }
 .thumb{
     height:171px;
     width:260px;
 }
+
 .thumb-pic:hover{
+    width: 60px;
+    height: 42px;
   box-shadow: inset 0px 1px 0px rgba(255,255,255,0.5), 0px 1px 5px rgba(0,0,0,0.4);
     -moz-box-shadow: inset 0px 1px 0px rgba(255,255,255,0.5), 0px 1px 5x rgba(0,0,0,0.4);
     -webkit-box-shadow: inset 0px 1px 0px rgba(255,255,255,0.5), 0px 1px 5px rgba(0,0,0,0.4);
@@ -218,11 +232,12 @@ body{
     height: 307px;
     width:233px;
     position: absolute;
+    margin-left: 10px;
 }
 .booking_col_2{
     height:307px;
     width:233px;
-    position: fixed;
+    position: absolute;
     z-index: 1;
     margin-left: 350px;
 }
@@ -230,7 +245,7 @@ body{
     height:307px;
     width:233px;
     position: absolute;
-    margin-left: 700px;
+    margin-left: 690px;
     top: 30px;
     z-index: ;
 }
@@ -240,6 +255,7 @@ body{
     color: #835e37;
     text-align: middle;
     vertical-align: text-bottom;
+    margin-top: 30px;
 }
 .bookingtel_context{
     height:20px;
@@ -252,7 +268,8 @@ body{
 .outer_context{
     width:800px;
     height:240px;
-    margin-top:30px; 
+    margin-top:30px;
+    margin-left: 70px; 
 }
 .outer_col_1{
     height: 329px;
@@ -264,7 +281,7 @@ body{
 .outer_col_2{
     height:329px;
     width:10px;
-    position: fixed;
+    position: absolute;
     z-index: 1;
     margin-left: 510px;
 }
@@ -324,7 +341,7 @@ body{
 .detailContent{
     width: 380px;
     margin-top: 30px;
-
+    
 }
 /*building.html*/
 .number{
@@ -347,7 +364,8 @@ body{
 .company_context{
     width:800px;
     height:240px;
-    margin-top:30px; 
+    margin-top:30px;
+    margin-left: 120px; 
 }
 .company_col_1{
     height:307px;
@@ -359,9 +377,9 @@ body{
 .company_col_2{
     height:329px;
     width:10px;
-    position: fixed;
+    position: absolute;
     z-index: 1;
-    margin-left: 290px;
+    margin-left: 280px;
 }
 .company_col_3{
     height: 329px;
@@ -395,3 +413,5 @@ body{
 .site{
     text-align: left;
 }
+
+
