--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,7 +7,7 @@ body{
 }
 .menu{
     background-image: url(../imgs/menu.jpg);
-    height: 137px;
+    height: 157px;
     width:1004px;
     position: absolute;
     margin-top: -40px;
@@ -65,13 +65,18 @@ body{
 .clickable{
     cursor:pointer;
 }
+
+.clickable2{
+    margin-left: 24px;
+}
+
 .menufont{
     color:wheat;
 }
 
 
 .phone-number{
-    font-size: 16px;
+    font-size: 13px;
 }
 .bottom-text{
     font-size: 13px;
@@ -81,6 +86,17 @@ body{
     /*left:30%;
     right:25%;*/
 }
+
+.bottom2-text{
+    font-size: 8px;
+    position: relative;
+    top: 12px;
+    color: wheat;
+    /*left:30%;
+    right:25%;*/
+}
+
+
 .landing{
     background-image: url(../imgs/welcome.jpg);
     width: 100%;
@@ -215,10 +231,14 @@ body{
     -webkit-box-shadow: inset 0px 1px 0px rgba(255,255,255,0.5), 0px 1px 5px rgba(0,0,0,0.4);
 }
 .intro-text{
-    text-align: left;
+    /*text-align: left;*/
     width: 296px;
     line-height: 25px;
-    font-size: 12px; 
+    font-size: 12px;/*12*/
+    text-align:justify; 
+    text-justify:inter-ideograph;
+    margin-left: 2;
+    /*margin-top:30px; */
 }
 
 
@@ -295,14 +315,14 @@ body{
     z-index: ;
 }
 .outer_text{
-    width:400px;
+    width:370px;
     height:240px;
     margin-left: -60px;
-    margin-top: 35px;
+    margin-top: 25px;
 }
 .outer_text p{
     font-size: 12px;
-    line-height: 25px;
+    line-height: 15px;
     text-align: left;
     margin-left: 0px;
     margin-top: 0px;
@@ -340,8 +360,7 @@ body{
 }
 .detailContent{
     width: 380px;
-    margin-top: 30px;
-    
+    margin-top: 30px;    
 }
 /*building.html*/
 .number{
@@ -353,7 +372,8 @@ body{
 .select-list{
     margin-top: -280px;
     height: 288px;
-    width:230px;
+    width:240px;
+    text-align: left;
 }
 .select-list li{
     list-style-type:none;
@@ -393,23 +413,28 @@ body{
 .company_text{
     width:380px;
     height:240px;
-    margin-left: -60px;
+    margin-left: -90px;
     margin-top: 0px;
 }
 .company_text p{
-    font-size: 13px;
+    font-size: 12px;
     line-height: 20px;
     text-align: left;
     margin-left: 0px;
     margin-top: 20px;
+    line-height:170%;
+    text-align:justify;
+    text-justify:inter-ideograph;
 }
 .company_titles{
-    line-height: 5px;
+    line-height: 15px;
     position: relative;
-    padding-top: 15px; 
+    padding-top: 20px; 
     text-align: left;
     font-size: 14px; 
+    width: 250px;
 }
+
 .site{
     text-align: left;
 }
