--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -411,13 +411,13 @@ body{
     top: 30px;
 }
 .company_text{
-    width:380px;
+    width:400px;
     height:240px;
     margin-left: -90px;
     margin-top: 0px;
 }
 .company_text p{
-    font-size: 12px;
+    font-size: 11px;
     line-height: 20px;
     text-align: left;
     margin-left: 0px;
@@ -425,6 +425,7 @@ body{
     line-height:170%;
     text-align:justify;
     text-justify:inter-ideograph;
+    text-indent:2em;
 }
 .company_titles{
     line-height: 20px;
@@ -438,5 +439,3 @@ body{
 .site{
     text-align: left;
 }
-
-
